whoops. modal z-index should be fixed now

--- a/scss/test.scss
+++ b/scss/test.scss
@@ -194,7 +194,7 @@ input {
 }
 
 #athensGridster {
-  z-index: 5;
+  z-index: 10;
   position: absolute;
   top:100px;
   left: 130px;
